--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,5 @@
 	url = git@github.com:LaytonW/XNRW.git
 [submodule "lib/XNRW"]
 	path = lib/XNRW
-	url = git@github.com:LaytonW/XNRW.git
+	url = git@github.com/LaytonW:XNRW.git
+	branch = master
