--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,10 @@
 language: cpp
 
+dist: trusty
+
 compiler:
   - gcc
   - clang
-
-matrix:
-  include:
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-6
-      env:
-        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-
-before_install:
-  - eval "${MATRIX_EVAL}"
-
-matrix:
-  include:
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - llvm-toolchain-trusty
-          packages:
-            - clang-5.0
-      env:
-        - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
-
-before_install:
-    - eval "${MATRIX_EVAL}"
 
 script: make && make test
 
